Home and NotFound Route Done

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,7 +1,10 @@
 .home-container {
-  padding: 24px;
-  height: 100vh;
+  height: 92vh;
   background-color: #f5f7fa;
+}
+
+.intro {
+  padding: 24px;
 }
 
 .home-title {
@@ -21,8 +24,8 @@
   letter-spacing: 0px;
   text-align: left;
   color: #475569;
-  margin-top: 7px;
-  margin-bottom: 7px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 312px;
 }
 
@@ -38,6 +41,74 @@
   border-radius: 4px;
   cursor: pointer;
   outline: none;
-  width: 104px;
-  height: 36px;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 203px;
+}
+
+.top_rated_books_container {
+  background-color: #ffffff;
+  box-shadow: 0px 0.4433962404727936px 0.8867924809455872px 0px #60617029;
+  box-shadow: 0px 0px 0.4433962404727936px 0px #28293d14;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top_rated_heading {
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0px;
+  color: #1e293b;
+  align-self: flex-start;
+  margin-left: 32px;
+}
+
+.slick-container {
+  width: 85%;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: black;
+}
+
+.home-error-view-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.failure-heading-text {
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #475569;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.try-again-btn {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  padding: 8px 16px;
+  color: #f8fafc;
+  background-color: #0284c7;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  outline: none;
 }
