--- a/src/components/Bookshelves/index.css
+++ b/src/components/Bookshelves/index.css
@@ -1,4 +1,6 @@
 .bookshelves-container {
+  display: flex;
+  flex-direction: column;
   background-color: #f5f7fa;
   min-height: 100vh;
   padding: 24px;
@@ -29,10 +31,78 @@
   outline: none;
 }
 
-.search-icon-container {
+.search-icon-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 52px;
   height: 34px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.bookshelves-list-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.bookshelves-list-heading {
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #334155;
+  margin-top: 16px;
+}
+
+.bookshelves-list {
+  list-style-type: none;
+  padding-left: 0px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.books-list-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.books-list {
+  list-style-type: none;
+  padding-left: 0px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.no-books-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.no-books-text {
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #475569;
+}
+
+.bookshelves-error-view-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 70px;
 }
