--- a/src/components/ShelfItem/index.css
+++ b/src/components/ShelfItem/index.css
@@ -30,3 +30,21 @@
   cursor: pointer;
   outline: none;
 }
+
+@media screen and (min-width: 767px) {
+  .shelf-item {
+    margin: 0px;
+  }
+  .active-shelf-btn {
+    background: none;
+    border: none;
+    color: #0284c7;
+    line-height: 24px;
+  }
+  .shelf-btn {
+    background: none;
+    border: none;
+    color: #475569;
+    line-height: 24px;
+  }
+}
