--- a/src/components/Bookshelves/index.css
+++ b/src/components/Bookshelves/index.css
@@ -106,3 +106,68 @@
   margin-bottom: 20px;
   margin-top: 70px;
 }
+
+.desktop-search-input-container {
+  display: flex;
+  align-items: center;
+  width: 264px;
+  height: 36px;
+  background-color: #edeff1;
+  border: 1px solid #cbd5e1;
+  border-radius: 0px 3px 3px 0px;
+}
+
+.books-header-container {
+  display: none;
+}
+
+.books-header-heading {
+  font-family: 'Roboto';
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #334155;
+}
+
+@media screen and (min-width: 767px) {
+  .search-input-container {
+    display: none;
+  }
+  .bookshelves-container {
+    flex-direction: row;
+    padding: 48px 150px;
+  }
+  .bookshelves-list-container {
+    flex-direction: column;
+    background-color: #ffffff;
+    padding: 32px;
+    width: 20%;
+  }
+  .bookshelves-list-heading {
+    font-size: 20px;
+    line-height: 32px;
+  }
+  .bookshelves-list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .books-list-container {
+    width: 100%;
+    padding-left: 32px;
+  }
+  .books-header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .books-list {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 24px;
+    width: 100%;
+  }
+}
