--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,5 +1,5 @@
 .home-container {
-  height: 92vh;
+  min-height: 100vh;
   background-color: #f5f7fa;
 }
 
@@ -111,4 +111,38 @@
   border-radius: 8px;
   cursor: pointer;
   outline: none;
+}
+
+@media screen and (min-width: 767px) {
+  .home-container {
+    padding: 48px 100px;
+  }
+  .intro {
+    padding: 0px;
+  }
+  .home-title {
+    font-size: 40px;
+    line-height: 64px;
+    font-weight: 600;
+  }
+  .home-text {
+    font-size: 20px;
+    line-height: 32px;
+    width: 80%;
+  }
+  .find-books-btn {
+    display: none;
+  }
+  .top_rated_books_container {
+    margin-top: 22px;
+    height: 424px;
+    padding: 24px 36px;
+  }
+  .top_rated_heading {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .slick-container {
+    width: 100%;
+  }
 }
